<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="AddRecord_Activity">活动</string>
    <string name="AddRecord_Done">完成</string>
    <string name="AddRecord_cancel">取消</string>
    <string name="AddRecord_date">日期</string>
    <string name="AddRecord_new_record">添加活动</string>
    <string name="AddRecord_record_name">项目名称</string>
    <string name="AddRecord_today">今天</string>
    <string name="AddRecord_today_yesterday">昨天+今天</string>
    <string name="AddRecord_yesterday">昨天</string>
    <string name="Can_not_travel_to_tomorrow">时间还没到哦</string>
    <string name="Cancel">取消</string>
    <string name="Certain">确定</string>
    <string name="CertainDialog_stopPreRecord">需先停止原项目，是否停止？</string>
    <string name="Chart">图</string>
    <string name="Clear_all_the_records">将清除该活动所有数据?</string>
    <string name="Customize">自定义</string>
    <string name="Day">日</string>
    <string name="Delete">删除</string>
    <string name="Delete_this_activity">确认删除该活动?</string>
    <string name="Delete_this_record">确认删除该记录?</string>
    <string name="Deleted_successfully">记录删除成功</string>
    <string name="Done">完成</string>
    <string name="Edit">编辑</string>
    <string name="EditActivity">编辑活动</string>
    <string name="EditRecord">修改记录</string>
    <string name="Hour">时</string>
    <string name="Icon_or_name_not_selected">图标或名称未选择</string>
    <string name="List">流</string>
    <string name="Main_setting">设置</string>
    <string name="Main_setting_count_down">计时方式为倒计时</string>
    <string name="Minute">分</string>
    <string name="Month">月</string>
    <string name="MyTimerPickView_title">自定义倒计时长</string>
    <string name="Please_select_the_activity">请选择要修改的活动</string>
    <string name="Record">Record</string>
    <string name="Replay">RePlan</string>
    <string name="Setting_count_down_time">倒计时长</string>
    <string name="Setting_vibration_reminder">开始/结束计时震动提示</string>
    <string name="StartDate">开始日期</string>
    <string name="StartTime">开始时间</string>
    <string name="Statistics">Statistic</string>
    <string name="Stop">停止</string>
    <string name="StopDate">结束日期</string>
    <string name="StopTime">结束时间</string>
    <string name="The_activity_is_counting_please_stop_it_first">活动正在计时中，请先停止计时。</string>
    <string name="Time_conflict_please_reselect">时间冲突，请重新选择</string>
    <string name="Time_is_too_short_to_be_counted">计时过短未被计入</string>
    <string name="TimerPicker_count_down_time">倒计时长</string>
    <string name="Unwritten">待记录...</string>
    <string name="Week">周</string>
    <string name="Year">年</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activity">活动</string>
    <string name="activity_already_exists">活动已存在</string>
    <string name="add_new_sort">添加分类</string>
    <string name="add_plan">添加</string>
    <string name="add_plan_success">添加成功</string>
    <string name="add_sort">添加分类</string>
    <string name="all_record">所有记录</string>
    <string name="app_name">RefTime</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="cv_app_name">CalendarView</string>
    <string name="default_sort_can_not_modified">默认分类暂不能修改</string>
    <string name="delee_plan">删除计划</string>
    <string name="edit_plan">编辑</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="fri">五</string>
    <string name="have_same_sort_name">与活动名重复啦</string>
    <string name="have_the_same_sort">和其他分类重复啦</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="main_all">所有</string>
    <string name="main_today">今日</string>
    <string name="make_music">制作音乐</string>
    <string name="mon">一</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="navigation_setting">设置</string>
    <string name="new_activity">添加活动</string>
    <string name="none">无</string>
    <string name="origin_activity_1">单击活动以开始/结束计时</string>
    <string name="origin_activity_2">长按可编辑/删除活动</string>
    <string name="origin_activity_3">沙漏-直接添加时间记录</string>
    <string name="origin_activity_4">时间图-查看时间分布</string>
    <string name="origin_activity_5">跑步</string>
    <string name="origin_activity_6">通过时间流查看/修改时间记录</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="period">周期</string>
    <string name="period_for_edit">周期：</string>
    <string name="please_select_plan_type">请选择活动</string>
    <string name="replan_view_achieve">实现</string>
    <string name="sat">六</string>
    <string name="search_menu_title">Search</string>
    <string name="sort">分类</string>
    <string name="sort_and_record_same_name">活动名与分类名重复啦</string>
    <string name="sort_color">分类颜色</string>
    <string name="sort_default">无</string>
    <string name="sort_name">分类名称</string>
    <string name="sort_name_no_choces">分类名称或者颜色没有选择</string>
    <string name="start">开始</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="stop">结束</string>
    <string name="sun">日</string>
    <string name="sure_delete_sort">确定删除该分组</string>
    <string name="thu">四</string>
    <string name="time">时间</string>
    <string name="time_for_dit">时间：</string>
    <string name="tink_more">再想想</string>
    <string name="toast_delete_success">删除完成</string>
    <string name="toast_plan_have_exit">项目重复，添加失败</string>
    <string name="toast_time_error">起止时间不合适</string>
    <string name="tue">二</string>
    <string name="tue_and_thu">周二 周四</string>
    <string name="wed">三</string>
    <string name="week_fri">周五</string>
    <string name="week_mon">周一</string>
    <string name="week_sat">周六</string>
    <string name="week_sun">周日</string>
    <string name="week_th">周二</string>
    <string name="week_the">周三</string>
    <string name="week_thu">周四</string>
    <string name="year_and_month">2020年10月</string>
</resources>
