<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:paddingBottom="24.0dip" android:layout_width="300.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/MyTimerPickView_title" />
    <LinearLayout android:layout_gravity="center" android:background="#ddffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" android:layout_centerInParent="true">
        <DateHelper.PickerView android:id="@id/minute_pv" android:layout_width="80.0dip" android:layout_height="100.0dip" />
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff333333" android:layout_gravity="center" android:id="@id/minute_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Hour" />
        <DateHelper.PickerView android:id="@id/second_pv" android:layout_width="80.0dip" android:layout_height="100.0dip" />
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff333333" android:layout_gravity="center" android:id="@id/second_tv" android:paddingRight="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Minute" />
    </LinearLayout>
    <FrameLayout android:paddingTop="48.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:gravity="center|right" android:layout_gravity="right" android:id="@id/cancel_time" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="70.0dip" android:text="@string/Cancel" />
        <TextView android:textSize="16.0sp" android:textColor="#ff8bc5a1" android:gravity="center|right" android:layout_gravity="right" android:id="@id/certain_time" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Certain" />
    </FrameLayout>
</LinearLayout>