<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/margin_left_right" android:layout_marginTop="16.0dip" android:layout_marginRight="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/back_to_pre" android:background="@drawable/back" android:layout_width="24.0dip" android:layout_height="24.0dip" />
        <TextView android:textSize="@dimen/statistics_activity_text_size_big" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="38.0dip" android:text="@string/add_sort" />
        <TextView android:textSize="@dimen/statistics_activity_text_size_big" android:textColor="#ffccedd2" android:gravity="center|right" android:layout_gravity="center|right" android:id="@id/finish_add_btn" android:background="#00000000" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/AddRecord_Done" />
    </FrameLayout>
    <TextView android:textSize="16.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sort_name" />
    <EditText android:id="@id/sort_name" android:background="@drawable/edit_style" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="34.0dip" android:layout_marginTop="16.0dip" android:hint="@string/sort_name" />
    <TextView android:textSize="16.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/sort_color" />
    <android.support.v7.widget.RecyclerView android:id="@id/rv_edit_item" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" />
    <TextView android:textSize="16.0sp" android:textColor="#ffff5a5a" android:gravity="center" android:layout_gravity="center" android:id="@id/delete_sort" android:background="#ffffffff" android:layout_width="106.0dip" android:layout_height="36.0dip" android:layout_marginTop="24.0dip" android:text="@string/Delete" />
</LinearLayout>