<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
        <LinearLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/statistics_activity_text_size_big" android:textColor="#ff333333" android:gravity="center" android:id="@id/show_circle" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/Chart" />
            <TextView android:textSize="@dimen/statistics_activity_text_size_big" android:textColor="#ff999999" android:gravity="center" android:id="@id/show_list" android:layout_width="60.0dip" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:text="@string/List" />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginTop="24.0dip">
        <Button android:textSize="@dimen/statistics_activity_text_size_big" android:textColor="@color/statistics_activity_text_color_picked" android:id="@id/day_btn" android:background="@color/statistics_activity_button_background" android:layout_width="@dimen/statistics_activity_button_width" android:layout_height="wrap_content" android:text="@string/Day" android:textAllCaps="false" />
        <Button android:textSize="@dimen/statistics_activity_text_size_big" android:textColor="@color/statistics_activity_text_color_unpick" android:id="@id/week_btn" android:background="@color/statistics_activity_button_background" android:layout_width="@dimen/statistics_activity_button_width" android:layout_height="wrap_content" android:text="@string/Week" android:textAllCaps="false" />
        <Button android:textSize="@dimen/statistics_activity_text_size_big" android:textColor="@color/statistics_activity_text_color_unpick" android:id="@id/month_btn" android:background="@color/statistics_activity_button_background" android:layout_width="@dimen/statistics_activity_button_width" android:layout_height="wrap_content" android:text="@string/Month" android:textAllCaps="false" />
        <Button android:textSize="@dimen/statistics_activity_text_size_big" android:textColor="@color/statistics_activity_text_color_unpick" android:id="@id/year_btn" android:background="@color/statistics_activity_button_background" android:layout_width="@dimen/statistics_activity_button_width" android:layout_height="wrap_content" android:text="@string/Year" android:textAllCaps="false" />
    </LinearLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="28.0dip">
        <ImageView android:id="@id/left_chart" android:background="@drawable/left_s" android:layout_width="23.0dip" android:layout_height="28.0dip" android:layout_marginLeft="80.0dip" />
        <ImageView android:layout_gravity="right" android:id="@id/right_chart" android:background="@drawable/right_s" android:layout_width="23.0dip" android:layout_height="28.0dip" android:layout_marginRight="80.0dip" />
        <TextView android:textSize="@dimen/statistics_activity_text_size_big" android:textColor="#ff333333" android:layout_gravity="center" android:id="@id/date_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="03月25日" />
    </FrameLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="1.0dip">
        <FrameLayout android:id="@id/show_circle_frame" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <android.support.v4.widget.NestedScrollView android:id="@id/scroll_view" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <JsonHelper.MyWebView android:layout_gravity="center_horizontal" android:id="@id/chart_show_web" android:background="#00000000" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            </android.support.v4.widget.NestedScrollView>
        </FrameLayout>
        <android.support.v7.widget.RecyclerView android:id="@id/show_list_rv" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff666666" android:gravity="center_vertical" android:id="@id/block_view" android:background="@drawable/block_style" android:paddingLeft="18.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="56.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/Unwritten" />
    </FrameLayout>
</LinearLayout>