<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/back_to_pre" android:background="@drawable/back" android:layout_width="24.0dip" android:layout_height="24.0dip" />
        <TextView android:textSize="@dimen/statistics_activity_text_size_big" android:textColor="#ff333333" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="38.0dip" android:text="@string/EditRecord" />
        <TextView android:textSize="@dimen/statistics_activity_text_size_big" android:textColor="#ffccedd2" android:gravity="center|right" android:layout_gravity="center|right" android:id="@id/finish_add_btn" android:background="#00000000" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/AddRecord_Done" />
    </FrameLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="43.0dip">
        <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@id/edit_record_time_emoji" android:layout_width="41.0dip" android:layout_height="41.0dip" />
        <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@id/edit_record_time_name" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="200.0dip" android:maxLines="1" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:background="@drawable/linear_style" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="43.0dip">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip">
            <TextView android:textSize="16.0sp" android:textColor="@color/textColorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/StartDate" />
            <TextView android:textSize="16.0sp" android:textColor="@color/textColorPrimary" android:layout_gravity="right" android:id="@id/edit_record_date_start" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </FrameLayout>
        <View android:layout_gravity="center" android:background="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip">
            <TextView android:textSize="16.0sp" android:textColor="@color/textColorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/StartTime" />
            <TextView android:textSize="16.0sp" android:textColor="@color/textColorPrimary" android:layout_gravity="right" android:id="@id/edit_record_time_start" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:background="@drawable/linear_style" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip">
            <TextView android:textSize="16.0sp" android:textColor="@color/textColorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/StopDate" />
            <TextView android:textSize="16.0sp" android:textColor="@color/textColorPrimary" android:layout_gravity="right" android:id="@id/edit_record_date_stop" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </FrameLayout>
        <View android:layout_gravity="center" android:background="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip">
            <TextView android:textSize="16.0sp" android:textColor="@color/textColorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/StopTime" />
            <TextView android:textSize="16.0sp" android:textColor="@color/textColorPrimary" android:layout_gravity="right" android:id="@id/edit_record_time_stop" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:textColor="#ffff5a5a" android:gravity="center" android:layout_gravity="center" android:id="@id/delete_record" android:background="#ffffffff" android:layout_width="124.0dip" android:layout_height="36.0dip" android:layout_marginTop="43.0dip" android:text="@string/Delete" />
</LinearLayout>