<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/CertainDialog_stopPreRecord" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
        <TextView android:textSize="@dimen/statistics_activity_text_size_small" android:textColor="#ff000000" android:id="@id/ic_dialog_emoji" android:layout_width="wrap_content" android:layout_height="34.0dip" />
        <TextView android:textSize="@dimen/statistics_activity_text_size_small" android:textColor="#ff666666" android:layout_gravity="right" android:id="@id/ic_dialog_name" android:layout_width="fill_parent" android:layout_height="34.0dip" android:layout_marginLeft="8.0dip" />
    </LinearLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginBottom="24.0dip">
        <TextView android:textSize="@dimen/statistics_activity_text_size_small" android:textColor="#ff8bc5a1" android:layout_gravity="right" android:id="@id/certain_item" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Stop" />
        <TextView android:textSize="@dimen/statistics_activity_text_size_small" android:textColor="#ff8bc5a1" android:layout_gravity="right" android:id="@id/cancel_item" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="70.0dip" android:text="@string/Cancel" />
    </FrameLayout>
</LinearLayout>