<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_left_right" android:layout_marginRight="20.0dip">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/back_to_pre" android:background="@drawable/back" android:layout_width="24.0dip" android:layout_height="24.0dip" />
        <TextView android:textSize="@dimen/statistics_activity_text_size_big" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="38.0dip" android:text="@string/sort" />
        <TextView android:textSize="@dimen/statistics_activity_text_size_big" android:textColor="#ff8bc5a1" android:gravity="center|right" android:layout_gravity="center|right" android:id="@id/finish_add_btn" android:background="#00000000" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/AddRecord_Done" />
    </FrameLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/add_sort_linear_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_left_right" android:layout_marginTop="24.0dip">
        <ImageView android:layout_gravity="center" android:layout_width="28.0dip" android:layout_height="28.0dip" android:src="@drawable/add_sort_color" />
        <TextView android:textSize="16.0sp" android:textColor="#ff666666" android:gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:layout_marginLeft="8.0dip" android:text="@string/add_new_sort" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView android:id="@id/rv_add_sort_exit" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="20.0dip" />
</LinearLayout>